k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: web
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: registry.plsdontspam.me/whoami:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
